--- a/templates/prefs.html
+++ b/templates/prefs.html
@@ -19,6 +19,12 @@
     font-size: 16px;
       height: 600px;
     }
+
+    @media screen and (max-width: 600px) {
+      .w3-container.w3-margin.w3-border.w3-padding select:not(#color-scheme){
+        height: 100%;
+      }
+    }
   </style>
   <script>
     if ('serviceWorker' in navigator) {
